# HumanDetectionSecurityCamera

./: CMakeLists.txt  LICENSE  README.md  package.xml
scripts/: mailsend.py
src/: imgsub.cpp
